Add query RAG
